Updated readings in Resources module

--- a/Dose_Nutrients.Rmd
+++ b/Dose_Nutrients.Rmd
@@ -47,18 +47,16 @@ tibble(Dose = 10^seq(0,5, length.out = 101),
   labs(x="Dose of something", y="Proportion responding somehow\n(e.g., surviving or dying)")
 ```
 
-You may have heard the phrase, "the dose makes the poison." Attributed to Paracelcus^["All things are poison, and nothing is without poison, the dosage alone makes it so a thing is not a poison." -Paracelsus], this maxim expresses a basic principle in toxicology that negative effects increase with the amount or concentration of some potentially harmful substance^[And the reverse is also true. [The dose also makes the cure!](https://www.canr.msu.edu/news/everyday-toxicology-digging-deeper-the-dose-makes-the-poison-the-cure)]. A staple experiment in toxicology is thus, not surprisingly, the _dose-response_ experiment in which groups of organisms are exposed to one of a series of increasing doses of the chemical of interest, usually spanning several orders of magnitude, and the outcome (e.g., death) is observed. Usually there is some sort of sigmoidal (S-shaped) relationship where nothing much happens at low doses and the response increases to a virtual certainty at high enough doses. Note that this relationship is usually sigmoidal only on a logarithmic x-axis. Doubling the dose does not double the probability of a response, but increasing the dose 10-fold might. 
+You may have heard the phrase, "the dose makes the poison." Attributed to Paracelcus^["All things are poison, and nothing is without poison, the dosage alone makes it so a thing is not a poison." -Paracelsus], this maxim expresses a basic principle in toxicology that negative effects increase with the amount or concentration of some potentially harmful substance^[And the reverse is also true. [The dose also makes the cure!](https://www.canr.msu.edu/news/everyday-toxicology-digging-deeper-the-dose-makes-the-poison-the-cure)]. A staple experiment in toxicology is thus, not surprisingly, the _dose-response_ experiment in which groups of organisms are exposed to one of a series of increasing doses of the chemical of interest, usually spanning several orders of magnitude, and the outcome (e.g., death) is observed. Usually there is some sort of sigmoidal (S-shaped) relationship where nothing much happens at low doses and the response increases to a virtual certainty at high enough doses. Note that this relationship is usually sigmoidal only on a logarithmic x-axis. Doubling the dose does not double the probability of a response, but increasing the dose 10-fold might. On the right is an actual dose-response curve involving guinea pigs from [Savransky et al. 2013](https://journals.asm.org/doi/10.1128/IAI.01289-12) as a random example.
 
-On the right is an actual dose-response curve involving guinea pigs from [Savransky et al. 2013](https://journals.asm.org/doi/10.1128/IAI.01289-12) as a random example.
-
-```{r, fig.margin = TRUE,  fig.cap="The proportion of guinea pigs that died with increasing doses of anthrax spores. (I couldn't find an example with toxins. Indeed, gunea pigs were more often used in  immunology than toxicology. And anyway, mice and rats are the real \"guinea pigs\" these days, anyway.)"}
+```{r, fig.margin = TRUE,  fig.cap="The proportion of guinea pigs that died with increasing doses of anthrax spores. (I couldn't find an example with toxins. Indeed, gunea pigs were more often used in  immunology than toxicology. Mice and rats are the real \"guinea pigs\" these days.)"}
 
 include_graphics("Dose-lethality-curve-obtained-by-using-the-log-transformed-estimated-inhaled-dosage-as_W640.jpeg", dpi=600)
 ```
 
 There is something puzzling about this sigmoidal relationship. After all, isn't there simply some lethal dose that can be survived and then anything below that is, at least under good conditions, survivable? And why does the curve taper off slowly when it reaches the maximum? Why does it not just hit the 100\% mark quickly? We can find a sort of answer to both questions by considering the fact that individuals are not all identical.
 
-## The tolerance model and heterogeneity in susceptibility 
+# The tolerance model and heterogeneity in susceptibility 
 
 ```{r, fig.margin=TRUE, fig.show = 'hold', fig.cap="A hypothetical distribution of tolerances in a group of animals (top) and the proportion of the group that would be affected (i.e., die) if exposed to a given dose (bottom)."}
 ggplot(data.frame(x=-6:0), aes(x=x)) + 
@@ -70,11 +68,10 @@ ggplot(data.frame(x=-6:0), aes(x=x)) +
   labs(x=expression(log[10]~Dose), y="Proportion of population\naffected at dose")
 ```
 
-Let's begin with this assumption, that hosts (i.e., individual animals) vary in the amount of the toxin^[Or toxicant, if it is abiotic in origin.] it can survive. Perhaps this is because of difference in activity in their liver (if they have a liver) or efficiency of their detoxifying enzymes or just plain "vigor"^[Whatever that means.]. This results in what is called a tolerance model, which has its origins in calculating effective doses of insecticides. In this context the idea is that an individual can tolerate a given amount of the insecticide, but succumbs beyond that. Hence the term "tolerance" model. 
+The "tolerance model"  has its origins in calculating effective doses of insecticides. It has two simple assumptions. First, an individual animal can tolerate (i.e., not get sick or die from) a set amount or concentration of a toxin^[Or toxicant, if it is abiotic in origin.]; beyond that threshold amount they succumb. Second, individuals can vary in their tolerances, perhaps  because of differences liver function (if they have a liver) or efficiency of their detoxifying enzymes or just plain "vigor." Thus, there is a _distribution_ of tolerances in the population. We are usually interested in the average tolerance of a population, but also in the variability; after all, when it comes to insect pests^[Including mosquitoes that vector infectious diseases.] we want to be sure to get rid of virtually all of them! But we can extend the model to other settings and situations, too.
 
-Let us assume that the population (e.g., of guinea pigs^[Can you imagine a herd of wild guinea pigs? Well, [cavy](https://en.wikipedia.org/wiki/Guinea_pig). Either way, it would be rediculously cute!]) has a distribution of tolerances to, say, Roundup, a glyphosate-based herbicide. Let's further assume that this distribution is a normal bell-shaped curve with a mean of $\mu$ (a concentration Roundup on the log-10 scale) and a standard deviation of $\sigma$. This means that half the population can withstand just under $\mu$, let's say mg/g, without becoming sick and dying. This half-way point should correspond to the $LD_{50}$, the dose at which half the population is expected to die. At lower doses, the threshold amount of Roundup has not been exceed for nearly as many guinea pigs, but at higher doses the threshold is exceeded for most guinea pigs. Hence, we get a classic, sigmoidal dose-response.
+Imagine we are interested in testing the toxicity of Roundup, a glyphosate-based herbicide in the lab using, say, guinea pigs. They exist in a population, albeit a laboratory colony rather than a wild herd^[Can you imagine a herd of wild guinea pigs? Well, [cavy](https://en.wikipedia.org/wiki/Guinea_pig). Either way, it would be ridiculously cute!]), and this population has a distribution of tolerances, which is probably normal bell-shaped curve with a mean of $\mu$ (a concentration Roundup on the log-10 scale) and a standard deviation of $\sigma$. This means that half^[Because in a normal distribution the mean is the same as the median.] the population can withstand just under $\mu$, let's say mg/g, without becoming sick and dying. This half-way point should correspond to the $LD_{50}$, the dose at which half the population is expected to die. At lower doses, the threshold amount of Roundup has not been exceed for nearly as many guinea pigs, but at higher doses the threshold is exceeded for most guinea pigs. Hence, we get a classic, sigmoidal dose-response.
 
-Now let us imagine that we study two populations og guinea pigs the same _average_ tolerance (or resistance) to Roundup. The first is an inbred group of animals that are more alike, and thus less variable (smaller $\sigma$) while the second is a wild population of outbred animals that has much more variation among individuals (larger $\sigma$). As you would expect, the tolerance  distribution for the wild population is wider than that of the inbred population, but as you might not have expected, you can actually see the outcome in a dose-response experiment. The wider distribution of tolerances results in a less-steep sigmoidal curve. Why is that? Hint, pick a point on the x-axis (e.g., -4), and think about what fraction of each population would succumb. Then pick another (e.g., -2) and repeat. 
 
 ```{r, fig.margin=TRUE, fig.show = 'hold', fig.cap="Tolerance distributions (top) and proportion that die at a given dose (bottom) for a highly inbred (red) and a more variable, outbred (blue) population."}
 ggplot(data.frame(x=-6:0), aes(x=x)) + 
@@ -88,12 +85,26 @@ ggplot(data.frame(x=-6:0), aes(x=x)) +
   labs(x=expression(log[10]~Dose), y="Proportion of population\ninfected at dose")
 ```
 
-So dose-response experiments tell us about the average response, as well as the distribution of responses. That is, it can tell us about the heterogeneity in susceptibility. This is cool in its own right^[And if we switch from thinking about toxins to infections, this can tell us something about how disease moves through or is transmitted in a population!], but it also tells us something important: over a sometimes wide range of concentrations of a toxin, there will _usually_ be some survivors. This is important because, assuming tolerance is heritable, these survivors can go on to reproduce and make a more tolerant population overall. Evolution by natural selection in action!
+Now let us imagine that we have two populations of guinea pigs with the same _average_ tolerance (or resistance) to Roundup. The first is an inbred group of animals that are more alike, and thus less variable (smaller $\sigma$) while the second is recently descended from a wild population of outbred animals that has much more variation among individuals (larger $\sigma$). As you would expect, the tolerance  distribution for the wild population is wider than that of the inbred population, but as you might not have expected, you can actually see the outcome in a dose-response experiment, too. The wider distribution of tolerances results in a less-steep sigmoidal curve. Why is that? Hint, pick a point on the x-axis (e.g., -4), and think about what fraction of individuals from each population would succumb. Then pick another (e.g., -2) and repeat. 
+
+So dose-response experiments tell us about the average response, as well as the distribution of responses. That is, it can tell us about the heterogeneity in susceptibility. This is cool in its own right^[And if we switch from thinking about toxins to infections, this can tell us something about how disease moves through or is transmitted in a population!], but it also tells us something important: over a sometimes wide range of concentrations of a toxin, there will _usually_ be some individuals that survive^[Think about what the resulting distribution of tolerance would look like, and their children.]. This is important because, assuming tolerance is heritable, these survivors can go on to reproduce and make a more tolerant population overall. Evolution by natural selection in action!
 
 # The other end of the spectrum
 
-Of course not all chemicals are toxic (at least not at lower doses), and some are essential for growth, replication, and overall health. We can take the same sort of approach, but change the response from "death" to, say, "reproduction." The tolerance distribution becomes the distribution of nutrient $x$ required reproduce^[One detail I'm sweeping under the rug is the difference between acute, all-at-once dosing as opposed to the intake rate over a longer period of time. This is on purpose. These distinctions are complicated by residence times and capacity to accumulate, but do not change the overall message I'm trying to convey.]. We get the same sort of sigmoidal response, only we would be happy to see that response. 
+Of course not all chemicals are toxic (at least not at lower doses), and some are essential for growth, replication, and overall health. We can take the same sort of approach, but change the response from "death" to, say, "survival" or "reproduction." The tolerance distribution becomes the distribution of nutrient $x$ required to survive or reproduce^[One detail I'm sweeping under the rug is the difference between acute, all-at-once dosing as opposed to the intake  over a longer period of time. This is on purpose. These distinctions are complicated by residence times and capacity to accumulate, but do not change the overall message I'm trying to convey.]. We get the same sort of sigmoidal response, only with responses that seem happier. The whole distributions tend to be shifted to the left, that is to lower doses, because we often need very small amounts of particular nutrients for health.
 
-When we step away from binary responses (do or do not reproduce) to quantitative responses (e.g., growth rates) is that we can observe a dose-response relationship even within an individual or among identical individuals. If growth is being slowed by a iron deficiency, adding a bit of iron will spur a bit of growth, but adding more iron will, perhaps, spur even more growth. The dose-response helps describe the case where, eventually, the benefits of additional iron, or any other no longer-limiting nutrient, wane.  
+We may also see dose-response relationships between concentrations of nutrients and _continuous_ or quantitative responses, like growth rates or reproductive output, because the rate of those processes might be limited by the nutrient. If, for instance, growth is slowed by a iron deficiency, then adding a bit of iron will spur a bit of growth and adding even more iron will, likely, spur even more growth. These sorts of dose-response relationships need not be sigmoidal, but could be sort of threshold-y. But notice that eventually the benefits of additional iron (or any other no longer-limiting nutrient) wane and the growth rate levels of or _saturates_.
 
-Think, too, about the steepness of the dose-response curve. If it is steep, then there is only a narrow range of doses where you will actually see a response (e.g., increased growth), meaning you tend to have either too little or more than enough. What would that mean for, say, the efficacy of a fertilizer or nutritional supplement? Contrast that with a shallow dose-response curve. Now I'll be honest, I really don't know the shape of the dose-responses of any nutrients, but I suspect that most are fairly steep and thus there are probably rare occasions where supplemental nutrients help^[And I can say from experience that iron supplements stain the ceiling when spit out by one's less than enthusiastic toddler. So there are costs to nutritional supplements as well as possible benefits.].
+```{r, fig.margin=TRUE, fig.show = 'hold', fig.cap="A hypothetical dose-response relationship between the concentration of a limiting nutrient (e.g., Iron) and an organism's growth rate."}
+ggplot(data.frame(x=0:10), aes(x=x)) + 
+  stat_function(fun=function(x) pmax(0, 0.5*(1-exp(-1*(x-1.5)))) ) + 
+  labs(x="Concentration of Fe in food", y="Average growth rate (mg/day)")
+```
+
+
+# Careful where you look!
+Finally, consider the steepness of the dose-response curves you have seen. If these curves are steep, there tends to be a rather narrow range of doses where you will actually see a response (e.g., increased growth, changes in mortality rates). Outside of this narrow range the organisms have too little or more than enough of the toxin or nutrient of interest. This has important consequences. 
+
+What would this mean, say, for the efficacy of a fertilizer or nutritional supplement? If you are already getting enough iron, then taking an iron supplement isn't likely to have much of an effect on your health^[Barring you taking so much you see toxic effects.]. Now I'll be honest, I really don't know the shape of the dose-responses of any nutrients in human health, but I suspect that most are fairly steep and that we in more developed nations tend to already get a fair bit of these nutrients in our food. Thus there are probably only rare occasions where supplemental nutrients help^[And I can say from experience that iron supplements stain the ceiling when spit out by one's less than enthusiastic toddler. So there are costs to nutritional supplements as well as possible benefits.]. So much for the idea that if a little is good, a lot must be better!
+
+Contrast that with a shallow dose-response curve, where we tend to see changes in the response of interest over a very wide range of doses. Again, I'm no expert in antibiotic tolerance curves, but I would suspect that the populations of pathogen bacteria that cause infections in us might have a pretty wide distribution of tolerances. If you  take enough of your prescribed antibiotics to kill off most (say 98%) of the bacteria infecting you, and thus you feel better, you might be tempted to stop taking the rest of the course. However, you would be leaving alive a relatively small fraction (2%) of the most tolerant bacteria to persist, reproduce, and maybe spread, which seems like a bad idea both for your health and for the risk of antibiotic resistance emerging. So follow your prescribed regimen. 
