--- a/FollowC.Rmd
+++ b/FollowC.Rmd
@@ -38,16 +38,23 @@ theme_set(theme_minimal())
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-In graduate school I took an ecology class from a rather famous, very clever, and somewhat curmudgeonly professor. I was excited to learn more about population dynamics, community interactions, and on and on. So I was a little shocked when said, on the first day, that ecology was the study of cycling of energy and nutrients through ecosystems. I raised my hand immediately and ask, "Wait, is that all?" To which he responded, "What else is there?" I was quite frustrated---he had swept all of the things I cared about under the metaphorical rug!---but he had a point. From a certain point of view, the stupendous variety of interesting species interacting in all of their varied ways are just moving energy and nutrients around! Indeed, I hope to convince you that while we should not be so hasty as to ignore so much of ecology^[And really, this professor didn't really think that way. He just liked to push us to think (and rethink) our ideas and sometimes to defend them.] you can and should consider the implications of this perspective. It shines a lot of light on how our world^[Probably _all_ worlds.] works!
+In graduate school I took an ecology class from a rather famous, very clever, and somewhat curmudgeonly professor. I was excited to learn more about population dynamics, community interactions, and on and on. So I was a little shocked on the first day when he said that ecology was the study of the cycling of energy and nutrients through ecosystems. I raised my hand immediately and ask, "Wait, is that all?" To which he responded, "What else is there?" 
+
+I was speechless---he had swept all of the things I cared about under the metaphorical rug!---but he had a point. From a certain point of view, the stupendous variety of interesting species interacting in all of their varied ways are just moving energy and nutrients around! Indeed, I hope to convince you that while we should not be so hasty as to ignore so much of ecology^[And really, this professor didn't really think that way. He just liked to push us to think (and rethink) clearly and defend our ideas.] you can and should consider the implications of this perspective. It shines a lot of light on how our world^[Probably _all_ worlds.] works!
 
 #  Carbon carries the energy
 
-If we are sacks of (complex) chemical reactions, and most of those chemical reactions require some energy to proceed, then ATP is the energy carrier. And there are a _lot_ of these reactions requiring a lot of energy! [One paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2604989/) mentions in an off-hand way that the human body turns over its body weight in ATP^[I.e., ATP releasing its energy and being converted to ADP, then being "re-energized" into ATP, over and over and over again] every day! 
+If we are sacks^[Made of many _tiny_ sacks] of (complex) chemical reactions, and most of those chemical reactions require some energy to proceed, then ATP is the energy carrier. And there are a _lot_ of these reactions requiring a lot of energy! [One paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2604989/) mentions in an off-hand way that the human body turns over its entire body weight in ATP^[I.e., ATP releasing its energy and being converted to ADP, then being "re-energized" into ATP, over and over and over again] every day! 
 
 However, if we zoom out just a little bit we see that energy is stored in the form of sugars (e.g., $\ce{C6H12O6}$), starches (=chains of sugars; $\ce{(C6H12O6)_n + (H2O)}$), and fats (e.g., saturated fatty acids; $\ce{CH3(CH2)_nCOOH}$). Look at those formula and what do you see? A heck of a lot of carbon atoms! Even proteins and their constituent amino acids are largely carbon. Indeed, if you squint^[Metaphorically. Actually squinting probably doesn't help.], you can see that virtually all of the energetic molecules we eat are primarily carbon. This is no coincidence; in a very real sense, the carbon atoms---or really, the bonds they form---carry the energy. 
 
-So if we are interested in how much energy is available in an ecosystem, or to a particular population or community---and trust me, we are!---we do not need to worry about the Kilocalories in this or that animal or plant. From the broad perspective of an ecosystem ecologist, all of the organisms growing, reproducing, dying, eating and being eaten, and so on is so many carbon atoms being cycled around; the rest is just details. 
+So if we are interested in how much energy is available in an ecosystem, or to a particular population or community---and trust me, we are!---we do not need to worry about the Kilocalories in this or that animal or plant. From the broad perspective of an ecosystem ecologist, all of the organisms growing, reproducing, dying, eating and being eaten, etc. are just so many carbon atoms being cycled around. Follow the carbon, the rest is just details. 
 
+
+```{r, fig.margin=TRUE, fig.cap="https://xkcd.com/1744/."}
+
+knitr::include_graphics("metabolism.png", dpi=150)
+```
 
 # Following the carbon
 
@@ -57,13 +64,13 @@ Let us adopt this zoomed-out perspective for a moment as we consider ourselves a
 \end{align}
 In essence, one form of carbon (here, a sugar) is converted into another form of carbon (carbon dioxide) and in the process provides some energy to do some sort of work. So when you eat, you take in carbon and when you metabolize that food, you exhale it. Again, track the carbon, track the energy. 
 
-So where did we get our (energetic) carbon from? Our food, I can hear you thinking. And where did our our food get its carbon? From _its_ food. Of course if our food was a plant, then its food was $\ce{CO2}$. Sort of. 
+So where did we get our (energetic) carbon from? Our food, I can hear you thinking. And where did our our food get its carbon? From _its_ food. Eventually get back to plants, who's food was $\ce{CO2}$. Sort of. 
 
-Actually the carbon came in the form of $\ce{CO2}$, but the _energy_ was from sunlight^[And yes, I am excluding chemoautotrophs that form sugars with the aid of energetic sulfur compounds or similar. Because while those systems are incredibly, achingly cool, they comprise a small bit of a tiny amount of the overall energy flow in the global ecosystem. And because I'm lazy.]. From our zoomed-out perspective, we can see photosynthesis as just the reverse of oxidative respiration:
+Actually the carbon came in the form of $\ce{CO2}$, but the _energy_ was from sunlight^[And yes, I am excluding chemoautotrophs that form sugars with the aid of energetic sulfur compounds or similar. Because while those systems are incredibly, achingly cool, they comprise just a tiny amount of the overall energy flow in the global ecosystem. And because I'm lazy.]. From our zoomed-out perspective, we can see photosynthesis as just the reverse of oxidative respiration:
  \begin{align}
 \ce{C6H12O6 + 6O2 <-->[respiration][photosynthesis] energy + 6CO2 + 6H2O}
 \end{align}
-It _fixes_ carbon dioxide into energetic sugar molecules that can be converted into other molecules or be metabolized to harvest their energy. Photosynthesis is _amazing_ and it kills me that we won't be discussing C3 and C4 and CAM photosynthetic pathways, water use efficiency, and all of the related topics^[As a relatively recent convert to the hotness that is photosynthesis, I get a bit overzealous!], but I did promise I wouldn't make this a plant-focused class. Plants are food and they make their food through photosynthesis. That will have to do. 
+Photosynthesis is a process of _fixing_ carbon dioxide into energetic sugar molecules that can be converted into other molecules or be metabolized to harvest their energy. Photosynthesis is _amazing_ and it kills me that we won't be discussing C3 and C4 and CAM photosynthetic pathways, water use efficiency, and all of the related topics^[As a relatively recent convert to the hotness that is photosynthesis, I get a bit overzealous!], but I did promise I wouldn't make this a plant-focused class. Plants are food and they make their food through photosynthesis. That will have to do. 
 
 Wait! One more thing! Photosynthesis, or the turning of inorganic $\ce{CO2}$ into organic molecules, like sugars, is called **Primary Production**^[This is probably ringing a bell, or eliciting an eye roll, but bear with me.]
 
@@ -76,28 +83,38 @@ knitr::include_graphics("Mauna_Loa_CO2_monthly_mean_concentration.svg.png", dpi=
 One neat consequence of this chemical formulation is that we can see some ways we might  _measure_ the amount of photosynthesis or primary production. Look at that equation. What do we gain with photosynthesis? Complex organic carbon molecules, yes? Or since most (dry) biomass is carbon, we could just measure the increase in biomass! And oxygen, we could measure increases in oxygen produced during photosynthesis. Scientists use all of these as metrics of primary production, from simply weighing plants and trees to see how much they've grown to using "flux towers" to measure oxygen concentrations in and around forests. Finally, we could measure the (local) reduction in $\ce{CO2}$ concentrations. You've seen the jagged [Keeling curve](https://en.wikipedia.org/wiki/Keeling_Curve) showing concentrations of $\ce{CO2}$ in the Earth's atmosphere over the decades since March 1958. Well the jagged up and down in the line (that otherwise rises alarmingly) in an annual pattern corresponds to growing seasons and the fact that there is more productive surface area in the Northern than the Southern Hemisphere. That is the Earth "inhaling"  or fixing carbon in the northern summer and then "exhaling" or respiring more in the northern winter. Crazy, right?^[If you are uncertain what you are seeing in the figure, walk through what happens to $\ce{CO2}$ when plants are growing and when they are not growing. And hint: plants respire as well as photosynthesize.]
 
 
-## An aside on the conservation of energy
+## An aside on the conservation of energy and $\ce{CO2}$
 
-You may recall from an earlier science class that energy cannot be created nor destroyed^[It's the (first) law (of thermodynamics)!]. Well, it's true
-But we do lose _useful_ energy. That is, we use energy to, say, read this piece in front of you, but you're not very efficient and so a lot fo that energy is "wasted" in the form of heat or entropy. We can't easily convert that lost heat back into some form of useful energy. Entropy^[And the second law of thermodynamics] is a pain! So when we follow the carbon, we need to focus on the _organic_ carbon, the stuff with the energy available to do work. $\ce{CO2}$ is just out there waiting to be turned into a useful form.
+You may recall from an earlier science class that energy cannot be created nor destroyed^[It's the (first) law (of thermodynamics)!]. Well, it's true. But we do lose _useful_ energy. That is, we use energy to, say, read this essay in front of you, but you're not very efficient and so a lot of that energy is "wasted" in the form of heat or entropy. We cannot easily convert that lost heat back into useful energy. Entropy^[And the second law of thermodynamics] is a pain! So when we follow the carbon, we need to focus on the _organic_ carbon, the stuff with the energy available to do work. $\ce{CO2}$ is just out there waiting to be turned into a useful form.
 
 # Sunshine to sugar
 
-Since essentially all the energy available for the world's organisms comes from photosynthesis^[Yes, ignoring chemoautotrophs, our use of photosynthetic energy from hundreds of millions of years ago.], it is interesting to pause and think about how much of that sunshine ends up becoming plant.  
+Since essentially all the energy available for the world's organisms comes from photosynthesis, it is interesting to pause and think about how much of that sunshine ends up becoming plant.  
 
-```{r, fig.margin = TRUE, fig.cap="The fate of sunlight in the conversion to sugars. Values taken from [Hall and Rao (1999) Photosynthesis](https://books.google.com/books?id=6F7yuf1Sj30C)", fig.alt = "Sankey diagram where the width of arrows is proportional to the size of the flow. Starts at the top with 100% of sunlight energy, then 47% is diverted to not photosynthetically active, then 25% is diverted to not absorbed, 19% to conversion costs, and 4% to cost of business, leaving 5% of the sunlight converted to GPP."}
+```{r, fig.margin = TRUE, fig.cap="The fate of sunlight in the conversion to sugars .", fig.alt = "Sankey diagram where the width of arrows is proportional to the size of the flow. Starts at the top with 100% of sunlight energy, then 47% is diverted to not photosynthetically active, then 25% is diverted to not absorbed, 19% to conversion costs, and 4% to cost of business, leaving 5% of the sunlight converted to GPP."}
 knitr::include_graphics("Sankey_GPP.png", dpi=600)
 ```
 
-First, nearly half of sunlight is outside the range that chlorophyll absorbs (400--700 nm). Then, of the "photosynthetically active radiation" range, another 47\% of the energy is simply not absorbed (e.g., they hit something besides a chlorophyll molecule) or otherwise lost in the interaction with the chlorophyll. We we are down to ~28\% of the sunlight shining down being collected by chlorophyll. But wait, something like 68\% is lost in the process of converting ATP and NADPH to glucose! However, the plant's photosynthetic machinery takes energy, too. Some 35--40\% of the remaining 9\% of sunlight's energy is respired just to keep this machinery working. So, of the sunlight that strikes a leaf, something like 5\%^[And often much, much less. Think winter or cloudy days or droughts or...] is actually converted into sugars that can then be used to grow and fuel the plant. 
+First^[  Values taken from [Hall and Rao 1999 Photosynthesis](https://books.google.com/books?id=6F7yuf1Sj30C). ], nearly half of sunlight is outside the range that chlorophyll absorbs (400--700 nm). Then, of the "photosynthetically active radiation," another half (a quarter of the energy in sunlight) is simply not absorbed (e.g., they hit something besides a chlorophyll molecule) or otherwise lost in the interaction with the chlorophyll. We we are down to ~28\% of the sunlight shining down being collected by chlorophyll. But wait, something like 68\% of this remaining energy is lost in the process of converting ATP and NADPH to glucose! However, the plant's photosynthetic machinery takes energy, too. Some 35--40\% of the remaining 9\% of sunlight's energy is respired just to keep this machinery working. So, of the sunlight that strikes a leaf, something like 5\%^[And often much, much less. Think winter or cloudy days or droughts or...] is actually converted into sugars that can then be used to grow and fuel the plant. 
 
-This, the actual amount of carbon that is made into usable sugars is called **Gross Primary Production** or $GPP$. But of course plants don't just make sugars, they use them, too. They _respire_, running that chemical reaction backwards, turning sugars into $\ce{CO2}$ and energy. This is often^[I mean, by fun people in the know.] called $Ra$, for **autotrophic respiration**. What is left is called **Net primary production** or $NPP$^[You down with NPP?]. Or, to mathify it:
+This, the actual amount of carbon that is made into usable sugars is called **Gross Primary Production** or $GPP$. But of course plants don't just make sugars, they use them, too. They _respire_, running that chemical reaction backwards, turning sugars into $\ce{CO2}$ and energy. This is often^[By fun people in the know.] called $Ra$, for **autotrophic respiration**. What is left is called **Net primary production** or $NPP$^[You down with [NPP?](https://www.youtube.com/watch?v=idx3GSL2KWs)]. Or, to mathify it:
 
 $$
 NPP = GPP - Ra
 $$
-Simple, yes? But let's not forget the staggering fact that this simple formula hides: $NPP$---that bit of the 5\% of sunlight's energy that is left over after we account for plant respiration---is the energy that fuels _everything_ else: the growth and reproduction of the plant, the making and fueling the things that eat the plant, the energy to make the things that eat the plant eaters, the things that eat them, and so on. All of it is fueled by $NPP$^[_Now_ are you down with GPP?]. 
+Simple, yes? But let's not forget the staggering fact what this simple formula hides: $NPP$---that bit of the 5\% of sunlight's energy that is left over after we account for plant respiration---is the energy that fuels _everything_ else, the growth and reproduction of the plant, the making and fueling the things that eat the plant, the energy to make the things that eat the plant eaters, the things that eat them, and so on. All of it is fueled by $NPP$^[_Now_ are you down with NPP?]. 
 
 ## An aside on measuring $NPP$
 
-I should point out that biologists do not generally measure $NPP$ or the rest of it on a plant-by-plant basis, but instead on a per area per unit time basis. They might pick a hectare in a field or a forest in a watershed and measure the accumulation of carbon (or biomass) over a year to measure $NPP$ per hectare per year, or similar. Why bother? Because again, that $NPP$ is the  fuel for every living thing out there. I find that striking. Look out the window. All of the people and animals and interesting things moving outside are fueled by the conversion of some fraction of just 5% of the light that strikes the plants and algae in an area. You and I and the hummingbird that just flew by are made from and fueled by that tiny drip of photosynthetic sugars left over by primary producers^[But that drip is substantial. One of my favorite factoids is that in the summer growing season every square meter of deciduous forest is making the equivalent of a number 2 pencil from thin air every day.  Just imagine it growing there before your eyes!].
+I should point out that biologists do not generally measure $NPP$ or the rest of it on a plant-by-plant basis, but instead on a per area per unit time basis. They might pick a hectare in a field or a forest in a watershed and measure the accumulation of carbon (or biomass) over a year to measure $NPP$ per hectare per year, or similar. Why bother? Because again, that $NPP$ is the fuel for every living thing out there. I find that striking. Look out the window. All of the people and animals and interesting things moving outside are fueled by the conversion of some fraction of just 5% of the light that strikes the plants and algae in an area. You and I and the hummingbird that just flew by are made from and fueled by that tiny drip of photosynthetic sugars left over by primary producers^[But that drip is substantial. One of my favorite factoids is that in the summer growing season every square meter of deciduous forest is making the equivalent of a number 2 pencil from thin air every day.  Just imagine it growing there before your eyes!].
+
+
+# What do plants need?
+
+Given it's fundamental importance, it is worth thinking about what limits and what promotes $NPP$.  What might we include in this list? Of course, sunlight must be important, since it is the source of energy that is being harvested through photosynthesis. And indeed, we see more $NPP$ in places with more sunlight than less (e.g., tropics vs. poles). We also see seasonal patterns to $NPP$ corresponding lots of sunlight (spring + summer) vs. times with little sunlight (fall + winter)^[See the jagged teeth of the Keeling curve again.]. Why else would so many trees lose their leaves if not for the fact that they were no longer earning their keep in terms of $NPP$^[Indeed, that's a great question! What would $GPP$ and $Ra$ look like if trees kept their leaves in a very seasonal environment?]? 
+
+What else do plants need? Water, of course, which is intricately linked to photosynthesis^[Oh how I want to talk about C3 vs C4 photosynthesis and water use efficiency!] and so places (and times^[Think wet vs. dry seasons]) with more water available tend to have higher $NPP$. 
+
+They also need nutrients, because those nutrients are part of enzymes, co-factors, and so on, which means you can increase $NPP$ by fertilizing an area^[Including oceans! You can cause algae blooms by adding iron and other nutrients!]. Essentially, anything that is limiting the growth of plants or algae can be increased to improve $NPP$. 
+
+Remember, photosynthesis is just a chemical reaction, albeit a complex one with several steps and many, many enzymes helping it along. So, like any chemical reaction, the things that can speed it along are things like high concentrations of reactants, temperature or energy, and ideal conditions. So in that light^[Pun most certainly _not_ intended!], nothing on our list should be surprising.  
